[package]
name = "escrow_dest"
authors = ["Himank Jain <himankjain@yahoo.in>"]
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sylvia = "1.3.0"
cw-storage-plus = "2.0.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
hex = { version = "0.4.3" , features = ["std","alloc","serde"]}

[dev-dependencies]
sylvia = { version = "1.3.0", features = ["mt"] }
